derive_tests/tests/compile_fail/not_a_string_type.stderr
error[E0277]: the trait bound `Vec<u8>: AsRef<str>` is not satisfied
 --> tests/compile_fail/not_a_string_type.rs:3:10
  |
3 | #[derive(Validate)]
  |          ^^^^^^^^ the trait `AsRef<str>` is not implemented for `Vec<u8>`
  |
  = help: the following other types implement trait `AsRef<T>`:
            <Vec<T, A> as AsRef<Vec<T, A>>>
            <Vec<T, A> as AsRef<[T]>>
  = note: required for `&Vec<u8>` to implement `AsRef<str>`
note: required by a bound in `validate_email`
 --> $WORKSPACE/validify/src/validation/email.rs
  |
  |     T: AsRef<str>,
  |        ^^^^^^^^^^ required by this bound in `validate_email`
  = note: this error originates in the derive macro `Validate` (in Nightly builds, run with -Z macro-backtrace for more info)
